[package]
name = "imagepreview"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
image = "0.25"
reqwest = { version = "0.12", features = ["rustls-tls"] }
futures = "0.3"
base64 = "0.22"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rayon = "1.10"
